<resources>
    <string name="app_name">Nirma4Parents</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance__screen">Attendance_Screen</string>
    <string name="Subjects">Subject with Code</string>
    <string name="color">Subjects</string>
    <string name="subjects">subjects</string>
    <string name="title_activity_start__screen">Nirma4Parents</string>
    <string name="title_activity_admin_">Admin_Activity</string>
    <string name="see_user">What do you want to see?</string>
    <string name="Radio_attendance">Attendance</string>
    <string name="textView3">What do you want to edit?</string>
    <string name="attendance">Attendance</string>
    <string name="examination_results">examination results</string>
    <string name="review">Review</string>
    <string name="suggestion">Suggestions for us?</string>
    <string name="complain">Complain from faculty</string>
    <string name="title_activity_activity_faculty">Activity_faculty</string>
    <string name="Facultypage_Roll_No">Enter the Roll No.:</string>
    <string name="Faculty_roll">Enter the Roll No.:</string>
    <string name="textView4">Enter the Comments:</string>
    <string name="Faculty_comment">Enter the Comment :</string>

    <string name="title_activity_attendance">Attendance</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_attendance__parents">Attendance_Parents</string>
    <string name="title_activity_result_table">Result_table</string>
    <string name="title_activity_parents_review">parents_review</string>
    <string name="title_activity_parents_suggestion">parents_suggestion</string>
    <string name="title_activity_admin__result__insert">Admin_Result_Insert</string>
    <string name="url">"http://192.168.137.1</string>


</resources>
