<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/see_user"
        android:id="@+id/see_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_alignTop="@+id/Radiogroup" />
    <RadioGroup
        android:id="@+id/Radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance"
            android:id="@+id/radioButton"
            android:checked="false"
            android:layout_marginTop="61dp"
            android:layout_below="@+id/see_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examination_results"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:id="@+id/radioButton3"
            android:layout_below="@+id/radioButton2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />
    </RadioGroup>
</RelativeLayout>
